--- a/UnderstandingTheJVM/类加载.md
+++ b/UnderstandingTheJVM/类加载.md
@@ -1,4 +1,4 @@
-# 类加载
+## 一.类加载
 
 - 在Java代码中，类型（Class）的加载、连接与初始化都是在程序运行期间（runtime）完成的
 
@@ -11,7 +11,7 @@
   2. 连接
 
      - 验证：确保被加载类的正确性
-     - 准备：为类的静态变量分配内存，并将其初始化为默认值
+     - 准备：为类变量分配内存，并将其初始化为默认值
      - 解析：把类中的符号引用转换为直接引用
 
   3. 初始化：为类的静态变量赋于正确的初始值
@@ -31,16 +31,29 @@
   4. 使用
 
   5. 卸载
-
-#### 1.类加载器
-
+  
 - Java虚拟机生命周期结束
+
   1. 执行System.exit( )方法
   2. 程序正常结束
   3. 程序在执行过程中遇到异常或错误而异常终止
   4. 操作系统错误而导致Java虚拟机终止
 
-#### 2.类的加载
+## 1.1 类加载器
+
+- 作用：将类加载到Java虚拟机中 
+- 分类
+  - Java虚拟机自带的类加载器
+    1. 根类加载器（Bootstrap）
+    2. 扩展类加载器（Extension）
+    3. 系统（应用）类加载器（System）
+  - 用户自定义的类加载器
+    1. java.lang.ClassLoader子类
+    2. 用户定制类的加载方式
+- 规则
+  - JVM规范允许类加载器在预料某个类需要使用前就预先加载，在加载过程中遇到.class文件缺失，则需要等到程序主动使用类时才抛出异常 <!--如果一直没有主动使用，则不会抛出异常-->
+
+## 1.2 类的加载
 
 - 类的加载 定义：将类的.class文件中的二进制数据加载到内存中，将其放置在运行区的方法区中，并在内存中创建java.lang.Class对象来封装类在方法区中的数据结构 <!--可以联系反射的内容-->
 
@@ -54,15 +67,79 @@
   - 从专有数据库中提取
   - **将Java源文件动态编译为.class文件** （动态代理时使用）
 
-#### 4.类的初始化
+## 1.3 类的连接
+
+### 1.3.1验证
+
+- 作用：验证文件
+  - 类文件的结构检查
+  - 语义检查
+  - 字节码验证
+  - 二进制兼容性检查
+
+### 1.3.2准备
+
+- 作用：为变量分配空间，并赋值为默认值
+
+- 实现
+
+  ```java
+  public class TestPreparation {
+      public static void main(String[] args) {
+          Singleton singleton = Singleton.getSingleton();
+          System.out.println("counter1:"+Singleton.counter1);
+          System.out.println("counter2:"+Singleton.counter2);
+      }
+  }
+  class Singleton{
+      static int counter1 = 1;
+      private static Singleton singleton = new Singleton();
+  
+      private Singleton(){
+          counter1++;
+          counter2++;
+      }
+  
+      static int counter2 = 0;
+      static Singleton getSingleton(){
+          return singleton;
+      }
+  }
+  /* output
+  counter1:2
+  counter2:0
+  */
+  ```
+
+  <!--解析-->
+
+  1.流程解析
+
+  1. 准备阶段，静态变量counter1赋值为0；静态变量singleton赋值为null；静态变量counter2赋值为0
+  2. 初始化阶段，静态变量counter1赋值为1；静态变量singleton指向类Singleton的对象实例，导致调用类的构造方法，将counter1赋值为2，counter2赋值为1；静态变量counter2赋值重新为0
+  3. 因此输出counter1为2；counter2为0
+
+## 1.4 类的初始化
+
+### 1.4.1 基础概念
 
 > Java对类的使用方式分为主动使用和被动使用
 
-- 初始化条件：类或者接口只有在“**首次主动使用**”时才被初始化
+- 初始化 条件：类或者接口只有在“**首次主动使用**”时才被初始化
 
   <!--1.初始化只有一次。2.必须要主动使用-->
 
-- 主动使用的情况
+- 初始化 规则
+
+  1. 如果类未加载和连接，则先进行加载和连接
+
+  2. 如果类存在父类且未初始化，则先将父类初始化
+
+     <!--初始化类时，不会初始化它实现的接口；初始化接口时，不会初始化它的父接口-->
+
+  3. 如果类中存在初始化语句，则依次执行初始化语句
+
+- 主动使用 方式
 
   1. 创建类的实例对象
 
@@ -114,7 +191,7 @@
      Class.forName("com.Test")
      ```
 
-  5. 初始化类的子类
+  5. 初始化类的子类 <!--接口不适用-->
 
      <!--实现-->
 
@@ -167,11 +244,164 @@
 
   7. REF_getStatic,REF_putStatic,REF_invokeStatic句柄对应的类如果未初始化则初始化
 
-- 被动使用的情况：除主动使用之外的情况
+- 被动使用 方式：除主动使用之外的情况
 
+### 1.4.2 不同类型
 
+#### 1.常量
 
+- 规则
 
+  - 常量在编译阶段会存入到调用这个常量的方法所在类的常量池中。调用类并不会直接引用定义常量的类，因此不会触发定义常量的类的初始化
+
+    <!--实现-->
+
+    ```
+    public class TestFinal {
+        public static void main(String[] args) {
+            System.out.println(TestBase.s);
+        }
+    }
+    class TestBase{
+        static final String s = "ABC";
+    
+        static {
+            System.out.println("TestBase Build");
+        }
+    }
+    /* output
+    ABC
+    */
+    /* conclusion
+    1.调用常量时，定义常量的TestBase类并没有被初始化，通过-XX:+TraceClassLoading发现TestBase类未加载
+    2.因此在编辑阶段，s常量会存入调用这个常量的方法（main方法）所在类（TestFinal）的常量池中
+    3.即使在编译后将TestBase的class文件删除，常量也能正常输出
+    */
+    ```
+
+  - 如果常量在编译期无法确定，则将初始化定义常量所在的类
+
+    <!--实现-->
+
+    ```java
+    public class TestFinal {
+        public static void main(String[] args) {
+            System.out.println(TestBase.sRandom);
+        }
+    }
+    class TestBase{
+        static final String sRandom = UUID.randomUUID().toString();
+    
+        static {
+            System.out.println("TestBase Build");
+        }
+    }
+    /* output
+    TestBase Build
+    fedb4d78-ff59-4810-ad80-60f468707e77
+    */
+    ```
+
+#### 2.数组
+
+- 规则
+
+  - 对于数组实例，其类型是在JVM在运行期间动态生成的（不会触发类的初始化）。动态生成的类型，其父类型就是java.lang.Object
+
+    <!--实现-->
+
+    ```java
+    public class TestArray {
+        public static void main(String[] args) {
+            SubTest subTest = new SubTest();
+            System.out.println("subTest.getClass():"+subTest.getClass());
+            System.out.println("=============");
+            SubTest[] subTests = new SubTest[1];
+            System.out.println("subTests.getClass():"+subTests.getClass());
+            System.out.println("subTests.getClass().getSuperclass():"+subTests.getClass().getSuperclass());
+            System.out.println("=============");
+            SubTest[][] subTestsMulti = new SubTest[1][1];
+            System.out.println("subTestsMulti.getClass():"+subTestsMulti.getClass());
+            System.out.println("subTestsMulti.getClass().getSuperclass():"+subTestsMulti.getClass().getSuperclass());
+        }
+    }
+    class SubTest{
+        static {
+            System.out.println("SubTest Build");
+        }
+    }
+    /* output
+    SubTest Build
+    subTest.getClass():class ClassLoader.SubTest
+    =============
+    subTests.getClass():class [LClassLoader.SubTest;
+    subTests.getClass().getSuperclass():class java.lang.Object
+    =============
+    subTestsMulti.getClass():class [[LClassLoader.SubTest;
+    subTestsMulti.getClass().getSuperclass():class java.lang.Object
+    */
+    ```
+
+#### 3.接口
+
+- 规则
+
+  - 当接口初始化时，不要求父类接口初始化
+
+  - 只有使用到父类接口（如引用到父类接口中定义的常量），父类才会初始化
+
+    <!--实现-->
+
+    ```java
+    // 第一次运行后，将out/production中的Super.class文件删除，确保父类没有class文件达到未编译的状态。此情况下依旧你能够输出值，说明不需要父类接口初始化
+    public class TestInterface {
+        public static void main(String[] args) {
+            System.out.println(Sub.b);
+        }
+    }
+    interface Super{
+        int a = 5;
+    }
+    interface Sub extends Super{
+        int b =6;
+    }
+    /* output
+    6
+    */
+    ```
+
+## 1.5 流程总结
+
+1. 加载：查找二进制文件并读取到Java虚拟机中
+
+2. 连接
+
+   1. 验证
+   2. 准备：为类变量分配内存，同时赋予默认值
+   3. 解析：将符号引用转换成直接引用
+
+3. 初始化：为类变量赋于正确的初始值
+
+4. 类实例化
+
+   1. 为新的对象分配内存
+
+   2. 为实例变量赋予默认值
+
+   3. 为实例变量赋予正确的初始值
+
+      <!--Java编译器为每一个类至少生成一个实例初始化方法，在java的class文件中，称为<init>。针对源代码中的每一个构造方法，都生成一个<init>-->
+
+## 1.6 加载参数
+
+- 格式
+  - -XX:+<option>：开启option选项
+  - -XX:-<option>：关闭option选项
+  - -XX:<option>=<value>：将option值赋值为value
+
+#### 1.-XX:+TraceClassLoading
+
+- 作用：用于追踪类的加载信息并打印出来
 
 
 
