--- a/UnderstandingTheJVM/类加载.md
+++ b/UnderstandingTheJVM/类加载.md
@@ -67,6 +67,62 @@
   - 从专有数据库中提取
   - **将Java源文件动态编译为.class文件** （动态代理时使用）
 
+#### 1.接口
+
+- 规则
+
+  - **如果调用接口中的静态常量，接口根本不会加载；如果调用接口实现类中的静态常量，类和接口都不会加载**
+
+    **原因：static和final共同修饰为静态常量，会直接纳入常量池。而接口中的变量默认有static和final修饰**
+
+    <!--实现-->
+
+    ```java
+    public class TestInterface {
+        public static void main(String[] args) {
+            System.out.println(Sub.b);
+        }
+    }
+    interface Super{
+        int a = 5;
+    }
+    interface Sub extends Super{
+        int b =6; // 接口中的变量默认为static和final
+    }
+    /* output
+    [0.184s][info   ][class,load] ClassLoader.TestInterface 
+    6
+    */
+    ```
+
+  - **如果调用接口实现类中的静态变量，类和接口都会加载**
+
+    <!--实现-->
+
+    ```java
+    public class TestInterface {
+        public static void main(String[] args) {
+            System.out.println(Sub.b);
+        }
+    }
+    interface Super{
+        int a = 5;
+    }
+    class Sub implements Super{
+       static int b =6;
+    }
+    /* output
+    [0.184s][info   ][class,load] ClassLoader.TestInterface 
+    [0.186s][info   ][class,load] ClassLoader.Super
+    [0.186s][info   ][class,load] ClassLoader.Sub
+    [0.187s][info   ][class,load] ClassLoader.Super$1 
+    6
+    */
+    
+    ```
+
+
+
 ## 1.3 类的连接
 
 ### 1.3.1验证
@@ -344,16 +400,46 @@
 
 #### 3.接口
 
-- 规则
+- 规则——重点
 
   - 当接口初始化时，不要求父类接口初始化
 
-  - 只有使用到父类接口（如引用到父类接口中定义的常量），父类才会初始化
+    <!--实现：接口未初始化-->
+
+    ```java
+    public class TestInterface {
+        public static void main(String[] args) {
+            System.out.println(Sub.THREAD);
+        }
+    }
+    interface Super{
+        Thread THREAD = new Thread(){
+            {
+                System.out.println("Super 线程初始化");
+            }
+        };
+    }
+    interface Sub extends Super{
+        Thread THREAD = new Thread(){
+            {
+                System.out.println("Sub 线程初始化");
+            }
+        };
+    }
+    /* output
+    Sub 线程初始化
+    Thread[Thread-0,5,main]
+    */
+    /* conclusion
+    1.未输出“Super 线程初始化”，因此父类接口未初始化
+    */
+    ```
+
+  - 当类初始化时，并不会要求实现的接口初始化
 
     <!--实现-->
 
-    ```java
-    // 第一次运行后，将out/production中的Super.class文件删除，确保父类没有class文件达到未编译的状态。此情况下依旧你能够输出值，说明不需要父类接口初始化
+    ```Java
     public class TestInterface {
         public static void main(String[] args) {
             System.out.println(Sub.b);
@@ -361,12 +447,87 @@
     }
     interface Super{
         int a = 5;
+        Thread THREAD = new Thread(){
+            {
+                System.out.println("线程初始化");
+            }
+        };
     }
-    interface Sub extends Super{
-        int b =6;
+    class Sub implements Super{
+        static int b =6;
     }
     /* output
     6
+    */
+    /* conclusion
+    1.未输出“线程初始化”，因此接口未初始化
+    */
+    ```
+
+  - 只有使用到父类接口（如引用到父类接口中定义的变量），父类才会初始化
+
+    注意：因为接口中变量默认为static和final修饰，如果是在编译期能够确认的变量，则父类不会初始化，而是纳入常量池
+
+    <!--实现：父类接口初始化-->
+
+    ```java
+    public class TestInterface {
+        public static void main(String[] args) {
+            System.out.println(Sub.a);
+        }
+    }
+    interface Super{
+        String a = UUID.randomUUID().toString();
+        Thread THREAD = new Thread(){
+            {
+                System.out.println("Super 线程初始化");
+            }
+        };
+    }
+    interface Sub extends Super{
+        Thread THREAD = new Thread(){
+            {
+                System.out.println("Sub 线程初始化");
+            }
+        };
+    }
+    /* output
+    Super 线程初始化
+    381c544d-3640-4ef6-bac5-5a32cddcd11a
+    */
+    /* conclusion
+    1.编译期时，String类型的s变量无法确认，因此父类接口将初始化
+    */
+    ```
+
+    <!--实现：父类接口不初始化-->
+
+    ```java
+    public class TestInterface {
+        public static void main(String[] args) {
+            System.out.println(Sub.a);
+        }
+    }
+    interface Super{
+        String a = "ABC";
+        Thread THREAD = new Thread(){
+            {
+                System.out.println("Super 线程初始化");
+            }
+        };
+    }
+    interface Sub extends Super{
+        Thread THREAD = new Thread(){
+            {
+                System.out.println("Sub 线程初始化");
+            }
+        };
+    }
+    /* output
+    ABC
+    */
+    /* conclusion
+    1.编译期时，String类型的s变量确认，因此父类接口不会初始化
     */
     ```
 
