--- a/UnderstandingTheJVM/类加载.md
+++ b/UnderstandingTheJVM/类加载.md
@@ -41,8 +41,12 @@
 
 ## 1.1 类加载器
 
+#### 1.基本概念
+
 - 作用：将类加载到Java虚拟机中 
+
 - 分类
+  
   - Java虚拟机自带的类加载器
     1. 根类加载器（Bootstrap）
     2. 扩展类加载器（Extension）
@@ -50,10 +54,88 @@
   - 用户自定义的类加载器
     1. java.lang.ClassLoader子类
     2. 用户定制类的加载方式
+  
 - 规则
+
   - JVM规范允许类加载器在预料某个类需要使用前就预先加载，在加载过程中遇到.class文件缺失，则需要等到程序主动使用类时才抛出异常 <!--如果一直没有主动使用，则不会抛出异常-->
 
+- 获取方式
+
+  - 获得当前类的ClassLoader：class.getClassLoader( )
+  - 获得线程上下文的ClassLoader：Thread.currentThread().getContextClassLoader( )
+  - 获得系统的ClassLoader：ClassLoader.getSystemClassLoader( )
+  - 获得调用者的ClassLoader：DriverManager.getCallerClassLoader( ) <!--使用较少-->
+
+- 实现：遍历输出Java虚拟机自带的类加载器
+
+  ```java
+  public class TestTraverseClassLoader {
+      public static void main(String[] args) {
+          ClassLoader classLoader = ClassLoader.getSystemClassLoader();
+          System.out.println(classLoader);
+          while (null != classLoader){
+              classLoader = classLoader.getParent();
+              System.out.println(classLoader);
+          }
+      }
+  }
+  /* output
+  jdk.internal.loader.ClassLoaders$AppClassLoader@3d4eac69
+  jdk.internal.loader.ClassLoaders$PlatformClassLoader@38af3868
+  null
+  */
+  /* conclusion
+  1.根类加载器输出结果为null
+  */
+  ```
+
+#### 2.双亲委托机制
+
+- 原理图
+
+  <!--加载器之间不是继承关系-->
+
+  ![](assets/1.类加载器双亲委托.png)
+
+  <!--解析-->
+
+  1.流程
+
+  1. Sample类加载时，首先检查用户自定义的类加载器Loader1，然后检查父加载器（系统加载器）是否已经加载，未加载则再向上检查，直到检查到根类加载器
+  2. 然后根类加载器尝试加载，由于根目录文件中不存在类的class文件，因此无法加载，则交给扩展类加载器，扩展类加载器无法加载则交给系统类加载器，系统类加载器能够加载（是程序默认的加载器），因此加载完成
+
+  2.定义类加载器 定义：真正加载类的加载器（图中的系统类加载器）
+
+  2.初始化加载器 定义：所有能返回Class对象的加载器（包括定义类加载器）称为初始化加载器
+
+- 实现
+
+  ```java
+  public class TestLoader {
+      public static void main(String[] args) throws Exception {
+          // 由根加载器加载的类
+          Class<?> class1 = Class.forName("java.lang.String");
+          System.out.println(class1.getClassLoader());
+  
+          // 由系统类加载器加载的类
+          Class<?> cClass = Class.forName("ClassLoader.C");
+          System.out.println(cClass.getClassLoader());
+      }
+  }
+  class C{ }
+  
+  /* output
+  null
+  jdk.internal.loader.ClassLoaders$AppClassLoader@3d4eac69
+  */
+  /* conclusion
+  1.由于String类能够被根类加载器加载，因此输出结果为null
+  */
+  ```
+
 ## 1.2 类的加载
+
+#### 1.基本概念
 
 - 类的加载 定义：将类的.class文件中的二进制数据加载到内存中，将其放置在运行区的方法区中，并在内存中创建java.lang.Class对象来封装类在方法区中的数据结构 <!--可以联系反射的内容-->
 
@@ -67,7 +149,7 @@
   - 从专有数据库中提取
   - **将Java源文件动态编译为.class文件** （动态代理时使用）
 
-#### 1.接口
+#### 2.接口
 
 - 规则
 
@@ -177,7 +259,7 @@
 
 ## 1.4 类的初始化
 
-### 1.4.1 基础概念
+### 1.4.1 基本概念
 
 > Java对类的使用方式分为主动使用和被动使用
 
@@ -200,6 +282,8 @@
   1. 创建类的实例对象
 
   2. 访问类或接口的静态变量或者给类或者接口的静态变量赋值
+
+     <!--如果静态变量定义在父类中，通过子类访问父类中的静态变量，则只会初始化父类-->
 
      <!--实现-->
 
@@ -237,14 +321,73 @@
 
   3. 调用类的静态方法
 
-     ```
-     invokestatic
+     <!--如果静态方法定义在父类中，通过子类访问父类中的静态方法，则只会初始化父类-->
+
+     <!--实现-->
+
+     ```java
+     class TestLauncher {
+         static {
+             System.out.println("TestLauncher static");
+         }
+     
+         public static void main(String[] args) {
+             TestSub.doSomething();
+         }
+     }
+     
+     class TestSuper{
+         static int a = 3;
+         static {
+             System.out.println("Super static");
+         }
+         static void doSomething(){
+             System.out.println("Super doSomething");
+         }
+     }
+     
+     class TestSub extends TestSuper{
+         static int b = 4;
+         static {
+             System.out.println("Sub static");
+         }
+     }
+     /* output
+     TestLauncher static
+     Super static
+     Super doSomething
+     */
      ```
 
   4. 反射
 
+     <!--实现-->
+
      ```java
-     Class.forName("com.Test")
+     class TestClass{
+         static {
+             System.out.println("TestClass Init");
+         }
+     }
+     
+     public class TestLoaderAndReflex {
+         public static void main(String[] args) throws Exception {
+             // 使用ClassLoader的loadClass方法加载类
+             ClassLoader classLoader = ClassLoader.getSystemClassLoader();
+             Class<?> class1 = classLoader.loadClass("ClassLoader.TestClass");
+             System.out.println(class1);
+             System.out.println("------------");
+             Class<?> class2 = Class.forName("ClassLoader.TestClass");
+             System.out.println(class2);
+     
+         }
+     }
+     /* output
+     class ClassLoader.TestClass
+     ------------
+     TestClass Init
+     class ClassLoader.TestClass
+     */
      ```
 
   5. 初始化类的子类 <!--接口不适用-->
@@ -289,12 +432,34 @@
      <!--举例-->
 
      ```java
-     public class TestClassLoader {
+     public class TestLauncher {
+         static {
+             System.out.println("TestLauncher static");
+         }
+     
          public static void main(String[] args) {
+             System.out.println(TestSub.b);
          }
      }
-     /* conclusion
-     1.TestClassLoader被标记为启动类，因为存在main方法
+     
+     class TestSuper{
+         static int a = 3;
+         static {
+             System.out.println("Super static");
+         }
+     }
+     
+     class TestSub extends TestSuper{
+         static int b = 4;
+         static {
+             System.out.println("Sub static");
+         }
+     } 
+     /* output
+     TestLauncher static
+     Super static
+     Sub static
+     4
      */
      ```
 
