--- a/Core Java/五.继承.md
+++ b/Core Java/五.继承.md
@@ -361,7 +361,7 @@
 
   原理图
 
-  ![](/Users/space/Documents/Package/Note/Core Java/assets/5.反射机制.jpg)
+  ![](assets/5.反射机制.jpg)
 
 - **获取Class对象的三种方式**
   
@@ -427,7 +427,7 @@
   
     <!--运行过程中，以下出现的方法属于Class类对象中的methods对象中的内容-->
   
-    ![](/Users/space/Documents/Package/Note/Core Java/assets/1.png)
+    ![](assets/1.png)
   
   - 实现通用的数组操作代码
   
