--- a/UnderstandingTheJVM/类加载.md
+++ b/UnderstandingTheJVM/类加载.md
@@ -108,6 +108,14 @@
 
   2.初始化加载器 定义：所有能返回Class对象的加载器（包括定义类加载器）称为初始化加载器
 
+- 作用：**防止内存中出现多份同样的字节码** 
+
+  原因：使用加载过的加载器进行加载，因此相同的类仅会加载一次
+
+- 注意
+
+  1. 加载请求向上发送，如果未加载则继续向上检查，如果加载过，直接返回字节码
+
 - 实现
 
   ```java
@@ -132,6 +140,85 @@
   1.由于String类能够被根类加载器加载，因此输出结果为null
   */
   ```
+
+#### 3.自定义加载器
+
+- 实现
+
+  ```java
+  import java.io.*;
+  
+  public class TestCreateClassLoader extends ClassLoader {
+      // 创建存储加载器名称的变量
+      private String classLoaderName;
+      // 创建加载文件的扩展名
+      private final String fileExtension = ".class";
+      // 构造方法
+      public TestCreateClassLoader(String classLoaderName){
+          super(); // 将系统加载器作为当前加载器的父加载器
+          this.classLoaderName = classLoaderName;
+      }
+      public TestCreateClassLoader(ClassLoader parent,String classLoaderName){
+          super(parent); // 调用指定的父加载器的构造方法
+          this.classLoaderName = classLoaderName;
+      }
+  
+      // 该方法将由loadClass方法内部自动调用
+      @Override protected Class<?> findClass(String className) {
+          // 获取读取到的字节数组
+          byte[] data = this.loadClassData(className);
+          // 将字节数组转换为一个字节实例
+          return this.defineClass(className, data, 0, data.length);
+      }
+  
+      // 返回class文件中的字节码数据，本质就是io
+      public byte[] loadClassData(String name){
+          InputStream is = null;
+          byte[] data = null;
+          ByteArrayOutputStream baos = null;
+  
+          try {
+              is = new FileInputStream(new File(name + this.fileExtension));
+              baos = new ByteArrayOutputStream();
+  
+              int ch;
+  
+              //读取文件中的内容
+              while (-1 != (ch = is.read())){
+                  baos.write(ch);
+              }
+              data = baos.toByteArray();
+  
+          } catch (Exception e) {
+              e.printStackTrace();
+          }
+          return data;
+      }
+  
+      public static void test(ClassLoader classLoader) throws Exception {
+          Class<?> clazz = classLoader.loadClass("ClassLoader.TestClass1");
+          Object obj = clazz.newInstance();
+  
+          System.out.println(obj);
+  
+      }
+  
+      public static void main(String[] args) throws Exception {
+          TestCreateClassLoader testCreateClassLoader = new TestCreateClassLoader("ClassLoader.TestCreateClassLoader");
+          test(testCreateClassLoader);
+      }
+  
+  
+  }
+  
+  class TestClass1{
+      String string = "ABC";
+  }
+  ```
+
+  <!--解析-->
+
+  1.自定义加载器即使在main方法中初始化并使用，实际调用的依旧是系统加载器，因为双亲委托机制
 
 ## 1.2 类的加载
 
@@ -202,8 +289,6 @@
     */
     
     ```
-
-
 
 ## 1.3 类的连接
 
@@ -529,6 +614,8 @@
 
   - 对于数组实例，其类型是在JVM在运行期间动态生成的（不会触发类的初始化）。动态生成的类型，其父类型就是java.lang.Object
 
+  - getClassLoader( )返回的数组类的类加载器与其元素类型的类加载器相同; 如果元素类型是原始类型，则数组类没有类加载器
+
     <!--实现-->
 
     ```java
@@ -544,11 +631,17 @@
             SubTest[][] subTestsMulti = new SubTest[1][1];
             System.out.println("subTestsMulti.getClass():"+subTestsMulti.getClass());
             System.out.println("subTestsMulti.getClass().getSuperclass():"+subTestsMulti.getClass().getSuperclass());
+            System.out.println("=============");
+            String[] strings = new String[2];
+            System.out.println(strings.getClass().getClassLoader());
+            System.out.println("=============");
+            int[] ints = new int[2];
+            System.out.println(ints.getClass().getClassLoader());
         }
     }
     class SubTest{
         static {
-            System.out.println("SubTest Build");
+            System.o ut.println("SubTest Build");
         }
     }
     /* output
@@ -560,8 +653,18 @@
     =============
     subTestsMulti.getClass():class [[LClassLoader.SubTest;
     subTestsMulti.getClass().getSuperclass():class java.lang.Object
+    =============
+    null //第一个null
+    =============
+    null //第二个null
     */
     ```
+
+    <!--解析-->
+
+    1.第一个null，代表根加载器。因为String类型是通过根加载器加载的
+
+    2.第二个null，表示没有加载器。因为元素为基本类型的数组，没有加载器
 
 #### 3.接口
 
