--- a/UnderstandingTheJVM/类加载.md
+++ b/UnderstandingTheJVM/类加载.md
@@ -149,76 +149,115 @@
   import java.io.*;
   
   public class TestCreateClassLoader extends ClassLoader {
-      // 创建存储加载器名称的变量
+      /*
+      Paraments
+       */
+      // 存储加载器名称
       private String classLoaderName;
-      // 创建加载文件的扩展名
+      // 存储加载类文件的路径
+      private String path;
+      // 类文件扩展名
       private final String fileExtension = ".class";
-      // 构造方法
+  
+      /*
+      Constructor
+       */
+      // 构造方法一，调用默认的父加载器的构造方法
       public TestCreateClassLoader(String classLoaderName){
-          super(); // 将系统加载器作为当前加载器的父加载器
+          super();
           this.classLoaderName = classLoaderName;
       }
+      // 构造方法二，调用指定父加载器的构造方法
       public TestCreateClassLoader(ClassLoader parent,String classLoaderName){
-          super(parent); // 调用指定的父加载器的构造方法
+          super(parent);
           this.classLoaderName = classLoaderName;
       }
   
-      // 该方法将由loadClass方法内部自动调用
-      @Override protected Class<?> findClass(String className) {
-          // 获取读取到的字节数组
-          byte[] data = this.loadClassData(className);
-          // 将字节数组转换为一个字节实例
-          return this.defineClass(className, data, 0, data.length);
+      /*
+      Methods
+       */
+      // 设置加载类文件的路径
+      public void setPath(String path) {
+          this.path = path;
       }
   
-      // 返回class文件中的字节码数据，本质就是io
-      public byte[] loadClassData(String name){
+      // 读取字节流，并返回字节数组
+      public byte[] loadClassData(String className) {
+          // 获取文件输入流
           InputStream is = null;
+          // 存储字节数组
           byte[] data = null;
+          // 字节流缓冲区
           ByteArrayOutputStream baos = null;
+          // 修改存储路径
+          className = className.replace(".", "/");
   
           try {
-              is = new FileInputStream(new File(name + this.fileExtension));
+              // 获取文件输入流
+              is = new FileInputStream(new File(this.path+className+this.fileExtension));
+              // 创建字节流缓冲区对象
               baos = new ByteArrayOutputStream();
   
+              // 创建单个字节保存变量
               int ch;
-  
-              //读取文件中的内容
+              // 读取字节流并保存
               while (-1 != (ch = is.read())){
                   baos.write(ch);
               }
-              data = baos.toByteArray();
   
+              // 将缓冲区中内容写入字节数组
+              data = baos.toByteArray();
           } catch (Exception e) {
               e.printStackTrace();
+          }finally  {
+              // 关闭输入输出流
+              try {
+                  is.close();
+                  baos.close();
+              } catch (IOException e) {
+                  e.printStackTrace();
+              }
           }
           return data;
       }
   
-      public static void test(ClassLoader classLoader) throws Exception {
-          Class<?> clazz = classLoader.loadClass("ClassLoader.TestClass1");
-          Object obj = clazz.newInstance();
-  
-          System.out.println(obj);
-  
+      // 重写父类findClass方法，类加载器会自动调用
+      @Override protected Class<?> findClass(String className) {
+          System.out.println("className:" + className );
+          System.out.println("classLoaderName:" + this.classLoaderName);
+          byte[] data = this.loadClassData(className);
+          return this.defineClass(className, data, 0, data.length);
       }
   
+      /*
+      Main
+       */
       public static void main(String[] args) throws Exception {
-          TestCreateClassLoader testCreateClassLoader = new TestCreateClassLoader("ClassLoader.TestCreateClassLoader");
-          test(testCreateClassLoader);
+          // 创建加载器实例
+          TestCreateClassLoader loader1 = new TestCreateClassLoader("loader1");
+          
+        // class文件的新地址
+        loader1.setPath("/Users/space/Documents/Growth/Package/Note/UnderstandingTheJVM/Practice/createClass/");
+  
+          // 获取加载后的Class对象
+          Class<?> clazz = loader1.loadClass("ClassLoader.TestClass1");
+          System.out.println(clazz);
+          // 原newInstance方法已过时
+          Object object = clazz.getDeclaredConstructor().newInstance();
+          System.out.println(object);
       }
-  
-  
   }
-  
-  class TestClass1{
-      String string = "ABC";
-  }
+  /* output
+  className:ClassLoader.TestClass1
+  classLoaderName:loader1
+  class ClassLoader.TestClass1
+  ClassLoader.TestClass1@682a0b20
+  */
   ```
 
   <!--解析-->
 
-  1.自定义加载器即使在main方法中初始化并使用，实际调用的依旧是系统加载器，因为双亲委托机制
+  **1.由于双亲机制的存在，如果不删除原路径下的被加载类的class文件，会导致使用系统加载器加载，因此需要复制被加载类的class文件到其他地址中，然后再调用自定义加载器加载**
 
 ## 1.2 类的加载
 
