--- a/UnderstandingTheJVM/类加载.md
+++ b/UnderstandingTheJVM/类加载.md
@@ -1,4 +1,4 @@
-## 一.类加载
+# 一.类加载
 
 - 在Java代码中，类型（Class）的加载、连接与初始化都是在程序运行期间（runtime）完成的
 
@@ -89,7 +89,7 @@
   */
   ```
 
-#### 2.双亲委托机制
+#### 2.双亲委托机制——重点
 
 - 原理图
 
@@ -115,6 +115,41 @@
 - 注意
 
   1. 加载请求向上发送，如果未加载则继续向上检查，如果加载过，直接返回字节码
+
+     <!--实现-->
+
+     ```java
+     public static void main(String[] args) throws Exception {
+             // 创建加载器实例
+             TestCreateClassLoader loader1 = new TestCreateClassLoader("loader1");
+             loader1.setPath("/Users/space/Documents/Growth/Package/Note/UnderstandingTheJVM/Practice/createClass/");
+             // 获取加载后的Class对象
+             Class<?> clazz = loader1.loadClass("ClassLoader.TestClass1");
+             System.out.println(clazz+";"+clazz.hashCode());
+             Object object = clazz.getDeclaredConstructor().newInstance();  // 原newInstance方法已过时
+             System.out.println(object);
+     
+             System.out.println("============");
+             // 创建加载器实例
+             TestCreateClassLoader loader2 = new TestCreateClassLoader("loader2");
+             loader2.setPath("/Users/space/Documents/Growth/Package/Note/UnderstandingTheJVM/Practice/createClass/");
+             // 获取加载后的Class对象
+             Class<?> clazz2 = loader2.loadClass("ClassLoader.TestClass1");
+             System.out.println(clazz2+";"+clazz2.hashCode());
+             Object object2 = clazz2.getDeclaredConstructor().newInstance();  // 原newInstance方法已过时
+             System.out.println(object2);
+         }
+     /* output
+     class ClassLoader.TestClass1;2001049719
+     ClassLoader.TestClass1@65ab7765
+     ============
+     class ClassLoader.TestClass1;2001049719
+     ClassLoader.TestClass1@eed1f14
+     */
+     /* conclusion
+     1.由于双亲机制，两个自定义加载器都没有生效，该类由系统加载器加载，所以返回的Class对象相同
+     */
+     ```
 
 - 实现
 
@@ -142,6 +177,38 @@
   ```
 
 #### 3.自定义加载器
+
+- 加载器执行顺序
+
+  1. 先判断类是否已经被加载
+
+  2. 判断父加载器是否已经加载
+
+  3. 搜索由用户自定义加载器中重写的findClass方法来找到类
+
+     <!--源码-->
+
+     ```java
+     /**
+          * Loads the class with the specified <a href="#binary-name">binary name</a>.  The
+          * default implementation of this method searches for classes in the
+          * following order:
+          *
+          * <ol>
+          *
+          *   <li><p> Invoke {@link #findLoadedClass(String)} to check if the class
+          *   has already been loaded.  </p></li>
+          *
+          *   <li><p> Invoke the {@link #loadClass(String) loadClass} method
+          *   on the parent class loader.  If the parent is {@code null} the class
+          *   loader built into the virtual machine is used, instead.  </p></li>
+          *
+          *   <li><p> Invoke the {@link #findClass(String)} method to find the
+          *   class.  </p></li>
+          *
+          * </ol>
+     **/
+     ```
 
 - 实现
 
@@ -257,7 +324,231 @@
 
   <!--解析-->
 
-  **1.由于双亲机制的存在，如果不删除原路径下的被加载类的class文件，会导致使用系统加载器加载，因此需要复制被加载类的class文件到其他地址中，然后再调用自定义加载器加载**
+  - **由于双亲机制的存在，如果不删除原路径下的被加载类的class文件，会导致使用系统加载器加载，因此需要复制被加载类的class文件到其他地址中，然后再调用自定义加载器加载**
+
+  - 子加载器需要重写findClass方法，因为父加载器中的findClass方法仅仅实现抛出异常
+
+    <!--源码-->
+
+    ```java
+    /**
+         * Finds the class with the specified <a href="#binary-name">binary name</a>.
+         * This method should be overridden by class loader implementations that
+         * follow the delegation model for loading classes, and will be invoked by
+         * the {@link #loadClass loadClass} method after checking the
+         * parent class loader for the requested class.
+         *
+         * @implSpec The default implementation throws {@code ClassNotFoundException}.
+         *
+         * @param  name
+         *         The <a href="#binary-name">binary name</a> of the class
+         *
+         * @return  The resulting {@code Class} object
+         *
+         * @throws  ClassNotFoundException
+         *          If the class could not be found
+         *
+         * @since  1.2
+         */
+        protected Class<?> findClass(String name) throws ClassNotFoundException {
+            throw new ClassNotFoundException(name);
+        }
+    ```
+
+#### 4.命名空间——重点
+
+- 命名空间 定义：每个类加载器都有自己的命名空间。命名空间是由该加载器以及该加载器的所有父加载器构成的。
+- 规则
+  - 同一个命名空间中，不会出现类的完整名字相同的两个类
+  - 在不同的命名空间，可能会出现两个类名字相同的两个类
+
+> **同一个类只加载一次的前提是：在同一个命名空间中**
+
+- 实现
+
+  - 同个类在两个命名空间中分别被加载（需要删除类加载器文件夹中的class文件）
+
+    <!--自定义加载器-->
+
+    ```java
+    import java.io.*;
+    
+    public class TestCreateClassLoader extends ClassLoader {
+        /*
+        Paraments
+         */
+        // 存储加载器名称
+        private String classLoaderName;
+        // 存储加载类文件的路径
+        private String path;
+        // 类文件扩展名
+        private final String fileExtension = ".class";
+    
+        /*
+        Constructor
+         */
+        // 构造方法一，调用默认的父加载器的构造方法
+        private TestCreateClassLoader(String classLoaderName){
+            super();
+            this.classLoaderName = classLoaderName;
+        }
+        // 构造方法二，调用指定父加载器的构造方法
+        public TestCreateClassLoader(ClassLoader parent,String classLoaderName){
+            super(parent);
+            this.classLoaderName = classLoaderName;
+        }
+    
+        /*
+        Methods
+         */
+        // 设置加载类文件的路径
+        public void setPath(String path) {
+            this.path = path;
+        }
+    
+        // 读取字节流，并返回字节数组
+        private byte[] loadClassData(String className) {
+            // 获取文件输入流
+            InputStream is = null;
+            // 存储字节数组
+            byte[] data = null;
+            // 字节流缓冲区
+            ByteArrayOutputStream baos = null;
+            // 修改存储路径
+            className = className.replace(".", "/");
+    
+            try {
+                // 获取文件输入流
+                is = new FileInputStream(new File(this.path+className+this.fileExtension));
+                // 创建字节流缓冲区对象
+                baos = new ByteArrayOutputStream();
+    
+                // 创建单个字节保存变量
+                int ch;
+                // 读取字节流并保存
+                while (-1 != (ch = is.read())){
+                    baos.write(ch);
+                }
+    
+                // 将缓冲区中内容写入字节数组
+                data = baos.toByteArray();
+            } catch (Exception e) {
+                e.printStackTrace();
+            }finally  {
+                // 关闭输入输出流
+                try {
+                    is.close();
+                    baos.close();
+                } catch (IOException e) {
+                    e.printStackTrace();
+                }
+            }
+            return data;
+        }
+    
+        // 重写父类findClass方法，类加载器会自动调用
+        @Override protected Class<?> findClass(String className) {
+            System.out.println("className:" + className );
+            System.out.println("classLoaderName:" + this.classLoaderName);
+            byte[] data = this.loadClassData(className);
+            return this.defineClass(className, data, 0, data.length);
+        }
+    }
+    ```
+
+    <!--测试类-->
+
+    ```java
+        public static void main(String[] args) throws Exception {
+            // 创建加载器实例
+            TestCreateClassLoader loader1 = new TestCreateClassLoader("loader1");
+            loader1.setPath("/Users/space/Documents/Growth/Package/Note/UnderstandingTheJVM/Practice/createClass/");
+            // 获取加载后的Class对象
+            Class<?> clazz = loader1.loadClass("ClassLoader.TestClass1");
+            System.out.println(clazz+";"+clazz.hashCode());
+            Object object = clazz.getDeclaredConstructor().newInstance();  // 原newInstance方法已过时
+            System.out.println(object);
+    
+            System.out.println("============");
+            // 创建加载器实例
+            TestCreateClassLoader loader2 = new TestCreateClassLoader("loader2");
+            loader2.setPath("/Users/space/Documents/Growth/Package/Note/UnderstandingTheJVM/Practice/createClass/");
+            // 获取加载后的Class对象
+            Class<?> clazz2 = loader2.loadClass("ClassLoader.TestClass1");
+            System.out.println(clazz2+";"+clazz2.hashCode());
+            Object object2 = clazz2.getDeclaredConstructor().newInstance();  // 原newInstance方法已过时
+            System.out.println(object2);
+        }
+    /* output
+    className:ClassLoader.TestClass1
+    classLoaderName:loader1
+    class ClassLoader.TestClass1;1831932724
+    ClassLoader.TestClass1@378bf509
+    ============
+    className:ClassLoader.TestClass1
+    classLoaderName:loader2
+    class ClassLoader.TestClass1;381259350
+    ClassLoader.TestClass1@7ef20235
+    */
+    ```
+
+  - 一个命名空间中存在自定义父加载器和子加载器，另一个命名空间中存在单独的加载器（需要删除类加载器文件夹中的class文件）
+
+    <!--测试方法-->
+
+    ```java
+    /*
+            不同命名空间以及父类加载器
+             */
+            System.out.println("============不同命名空间以及父类加载器");
+            // 创建加载器实例
+            TestCreateClassLoader loader3 = new TestCreateClassLoader("loader3");
+            loader3.setPath("/Users/space/Documents/Growth/Package/Note/UnderstandingTheJVM/Practice/createClass/");
+            // 获取加载后的Class对象
+            Class<?> clazz3 = loader3.loadClass("ClassLoader.TestClass1");
+            System.out.println(clazz3+";"+clazz3.hashCode());
+            Object object3 = clazz3.getDeclaredConstructor().newInstance();  // 原newInstance方法已过时
+            System.out.println(object3);
+    
+            System.out.println("============");
+            // 创建加载器实例
+            TestCreateClassLoader loader4 = new TestCreateClassLoader(loader3,"loader4");
+            loader4.setPath("/Users/space/Documents/Growth/Package/Note/UnderstandingTheJVM/Practice/createClass/");
+            // 获取加载后的Class对象
+            Class<?> clazz4 = loader4.loadClass("ClassLoader.TestClass1");
+            System.out.println(clazz4+";"+clazz4.hashCode());
+            Object object4 = clazz4.getDeclaredConstructor().newInstance();  // 原newInstance方法已过时
+            System.out.println(object4);
+    
+            System.out.println("============");
+            // 创建加载器实例
+            TestCreateClassLoader loader5 = new TestCreateClassLoader("loader4");
+            loader5.setPath("/Users/space/Documents/Growth/Package/Note/UnderstandingTheJVM/Practice/createClass/");
+            // 获取加载后的Class对象
+            Class<?> clazz5 = loader5.loadClass("ClassLoader.TestClass1");
+            System.out.println(clazz5+";"+clazz5.hashCode());
+            Object object5 = clazz5.getDeclaredConstructor().newInstance();  // 原newInstance方法已过时
+            System.out.println(object5);
+    /* output
+    ============不同命名空间以及父类加载器
+    className:ClassLoader.TestClass1
+    classLoaderName:loader3
+    class ClassLoader.TestClass1;363771819
+    ClassLoader.TestClass1@7b23ec81
+    ============
+    class ClassLoader.TestClass1;363771819
+    ClassLoader.TestClass1@5f184fc6
+    ============
+    className:ClassLoader.TestClass1
+    classLoaderName:loader4
+    class ClassLoader.TestClass1;1867083167
+    ClassLoader.TestClass1@723279cf
+    */
+    /* conclusion
+    1.loader3是loader4的父加载器，因此属于同一命名空间。因此只会加载一次同一个类
+    2.loader5有另一个命名空间，因此会加载该类
+    */
+    ```
 
 ## 1.2 类的加载
 
@@ -401,7 +692,7 @@
 
   3. 如果类中存在初始化语句，则依次执行初始化语句
 
-- 主动使用 方式
+- **主动使用 方式——重点**
 
   1. 创建类的实例对象
 
@@ -870,6 +1161,170 @@
 #### 1.-XX:+TraceClassLoading
 
 - 作用：用于追踪类的加载信息并打印出来
+
+# 二.类卸载
+
+#### 1.基本概念
+
+- 卸载：当类被加载、准备、初始化后，类的生命周期开始。当代表类的Class对象不被引用（即不可触及），Class对象的生命周期结束，类在方法区中的数据将被卸载，类的生命周期结束。
+
+  <!--因此，类生命周期取决于对应的Class对象的生命周期-->
+
+- 规则
+
+  - 由Java虚拟机自带的类加载器加载的类，始终不会被卸载
+  - 由用户自定义的类加载器是能够被卸载的
+
+- 实现
+
+  1. 创建被加载和卸载的类
+  2. 创建自定义加载器
+  3. 执行卸载
+
+  ```java
+  package ClassUnloading;
+  
+  /*
+  @Author: Toyz
+  @Date: 2019/8/27
+  @Time: 15:30
+  @Purpose:被卸载类
+  @Related:TestUnloading
+  */
+  
+  
+  public class TestClass {
+  }
+  
+  ```
+
+  ```java
+  package ClassUnloading;
+  
+  /*
+  @Author: Toyz
+  @Date: 2019/8/27
+  @Time: 15:29
+  @Purpose:模拟由用户自定义类加载加载的类被卸载
+  @Related:TestClass.java
+  */
+  
+  
+  import java.io.*;
+  
+  public class TestUnloading extends ClassLoader{
+      /*
+      1.创建自定义类加载器
+       */
+      // 1.1 变量
+      private String classLoaderName; //存储加载器名称
+      private String path; //存储类文件路径
+      private final String fileExtension = ".class"; //文件后缀名
+  
+      // 1.2 类加载器的构造方法
+      private TestUnloading(String classLoaderName){
+          super();
+          this.classLoaderName = classLoaderName;
+      }
+  
+      // 1.3 设置类文件路径方法
+      public void setPath(String path) {
+          this.path = path;
+      }
+  
+      // 1.4 读取class文件数据并返回字节码数组的方法
+      private byte[] loadClassData(String className){
+          // 1.4.1 定义变量
+          InputStream is = null; //文件输入流
+          byte[] data = null; //返回的字节码数组
+          ByteArrayOutputStream baos = null; //存储字节的缓冲区
+  
+          // 1.4.2 获取文件输入流并赋值
+          className = className.replace(".", "/"); //将类名中的符号修改为路径
+  
+          try {
+              is = new FileInputStream(new File(this.path+className+this.fileExtension)); //获取文件输入流
+              int ch; //存储字节
+              baos = new ByteArrayOutputStream(); //创建字节缓冲区对象
+              while (-1 != (ch = is.read())){
+                  baos.write(ch);
+              }
+              data = baos.toByteArray();
+          } catch (Exception e) {
+              e.printStackTrace();
+          }finally {
+              try {
+                  is.close();
+                  baos.close();
+              } catch (IOException e) {
+                  e.printStackTrace();
+              }
+          }
+          return data;
+      }
+  
+      // 1.5 重写父加载器的方法，用来查找class的方法
+      @Override protected Class<?> findClass(String name) throws ClassNotFoundException {
+          System.out.println("ClassLoader:"+this.classLoaderName);
+          System.out.println("ClassName:"+name);
+          byte[] data = this.loadClassData(name);
+          return this.defineClass(name, data, 0, data.length);
+      }
+  
+      /*
+      2.测试自定义加载器并卸载类
+       */
+      public static void main(String[] args) throws Exception {
+          // 2.1 创建加载器实例并加载类
+          TestUnloading loader = new TestUnloading("customizeLoader");
+          loader.setPath("/Users/space/Documents/Growth/Package/Note/UnderstandingTheJVM/Practice/createClass/");
+          Class<?> clazz = loader.loadClass("ClassUnloading.TestClass");
+          System.out.println(clazz);
+          Object object = clazz.getDeclaredConstructor().newInstance();
+          System.out.println(object);
+  
+          // 2.2 卸载类
+          loader = null;  //将加载器引用置空
+          clazz = null;   //将class引用置空
+          object = null;  //将Object对象引用置空
+          Thread.sleep(5000);
+          System.out.println("=============调用垃圾回收");
+          System.gc();    //调用垃圾回收器
+          System.out.println("=============测试置空情况");
+          // 2.3 测试置空情况
+          System.out.println(loader);
+          System.out.println(clazz);
+          System.out.println(object);
+      }
+  }
+  /* output
+  [0.003s][warning][arguments] -XX:+TraceClassUnloading is deprecated. Will use -Xlog:class+unload=info instead.
+  ClassLoader:customizeLoader
+  ClassName:ClassUnloading.TestClass
+  class ClassUnloading.TestClass
+  ClassUnloading.TestClass@682a0b20
+  =============调用回收
+  [5.188s][info   ][class,unload] unloading class ClassUnloading.TestClass 0x000000080116a840
+  =============测试置空情况
+  null
+  null
+  null
+  */
+  ```
+
+  
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
