--- a/UnderstandingTheJVM/类加载.md
+++ b/UnderstandingTheJVM/类加载.md
@@ -178,13 +178,19 @@
 
 #### 3.自定义加载器
 
-- 加载器执行顺序
+- 加载流程
 
   1. 先判断类是否已经被加载
 
   2. 判断父加载器是否已经加载
 
-  3. 搜索由用户自定义加载器中重写的findClass方法来找到类
+  3. 使用由用户自定义加载器中重写的findClass方法
+
+  4. 用户自定义加载器重写的findClass方法调用loadClassData方法
+
+  5. loadClassDataa方法将本地的class文件读取到内存中，并返回class的字节码数组给findClass方法
+
+  6. findClass方法获取到后，调用系统加载器中的defineClass方法
 
      <!--源码-->
 
