--- a/UnderstandingTheJVM/类加载.md
+++ b/UnderstandingTheJVM/类加载.md
@@ -106,7 +106,11 @@
 
   2.定义类加载器 定义：真正加载类的加载器（图中的系统类加载器）
 
-  2.初始化加载器 定义：所有能返回Class对象的加载器（包括定义类加载器）称为初始化加载器
+  3.初始化加载器 定义：所有能返回Class对象的加载器（包括定义类加载器）称为初始化加载器
+
+  4.加载器之间层次关系，不是继承而是包含，因为类加载器中有另一个加载器作为成员变量 
+
+  5.如果Sample类的class文件放置到根类加载器目录下，则将由根类加载器加载
 
 - 作用：**防止内存中出现多份同样的字节码** 
 
@@ -364,11 +368,152 @@
 #### 4.命名空间——重点
 
 - 命名空间 定义：每个类加载器都有自己的命名空间。命名空间是由该加载器以及该加载器的所有父加载器构成的。
-- 规则
-  - 同一个命名空间中，不会出现类的完整名字相同的两个类
-  - 在不同的命名空间，可能会出现两个类名字相同的两个类
 
-> **同一个类只加载一次的前提是：在同一个命名空间中**
+- 规则
+  
+  > 同一个类只加载一次的前提是：在同一个命名空间中
+  
+  - **同一个命名空间中，不会出现类的完整名字相同的两个类**
+  
+  - **在不同的命名空间，可能会出现两个类名字相同的两个类**
+  
+  - **同一命名空间中，父加载器所加载的类无法找到子加载器所加载的类，子加载器所加载的类可以找到父加载器所加载的类**
+  
+    1. 父加载器无法找到子加载器所加载的类
+  
+       <!--实现-->
+  
+       ```java
+       /*
+       @Author: Toyz
+       @Date: 2019/8/29
+       @Time: 11:47
+       @Purpose:测试类
+       @Related:TestLoader2
+       */
+       
+       public class Super2 {
+           public Super2() {
+               System.out.println("Super2的加载器:"+Super2.class.getClassLoader());
+               new Sub2();
+           }
+       }
+       ```
+  
+       ```java
+       /*
+       @Author: Toyz
+       @Date: 2019/8/29
+       @Time: 11:47
+       @Purpose:测试类
+       @Related:TestLoader2
+       */
+       
+       public class Sub2 {
+           public Sub2() {
+               System.out.println("Sub2的加载器:"+Sub2.class.getClassLoader());
+               System.out.println("From Super2:"+Super2.class);
+           }
+       }
+       ```
+  
+       <!--测试类：系统加载器目录下无Super2的class类型文件，有Sub2的class类型文件；在自定义加载器目录下有Super2和Sub2的class类型文件-->
+  
+       ```java
+       /*
+       @Author: Toyz
+       @Date: 2019/8/28
+       @Time: 16:16
+       @Purpose:测试如果在一个类中创建另一个类的实例，则在类的加载时，是否会加载被创建实例的类
+       @Related:Super2,Sub2
+       */
+       
+       public class TestLoader2 {
+           public static void main(String[] args) throws Exception {
+               TestCreateClassLoader loader = new TestCreateClassLoader("loader");
+               loader.setPath("/Users/space/Documents/Growth/Package/Note/UnderstandingTheJVM/Practice/createClass/");
+               Class<?> clazz = loader.loadClass("ClassLoader.Super2");
+               Object object = clazz.newInstance();
+           }
+       }
+       /* output
+       className:ClassLoader.Super2
+       classLoaderName:loader
+       Super2的加载器:ClassLoader.TestCreateClassLoader@77459877
+       Sub2的加载器:jdk.internal.loader.ClassLoaders$AppClassLoader@3d4eac69
+       NoClassDefFoundError: ClassLoader/Super2
+       */
+       ```
+  
+       <!--解析-->
+  
+       1.抛出异常：执行到Sub2中的“System.out.println("From Super2:"+Super2.class);”时抛出异常
+  
+       2.异常原因分析
+  
+       - 基本情况
+         - Super2由自定义加载器（子加载器）加载；Sub2由系统类加载器（父加载器）加载
+         - Sub2中访问了由自定义加载器（子加载器）所加载出来的Super2类
+         - 自定义加载器和系统类加载器处于同一个命名空间中
+       - 规则
+         - 父加载器所加载的类无法找到子加载器所加载的类
+       - 结论
+         - 由父加载器所加载的Sub2是无法访问由子加载器所加载的Super2类
+  
+    2. 子加载器可以找到父加载器所加载的类
+  
+       <!--实现-->
+  
+       ```java
+       public class Super2 {
+           public Super2() {
+               System.out.println("Super2的加载器:"+Super2.class.getClassLoader());
+               new Sub2();
+               System.out.println("From Sub2:"+Sub2.class);
+           }
+       }
+       ```
+  
+       ```java
+       public class Sub2 {
+           public Sub2() {
+               System.out.println("Sub2的加载器:"+Sub2.class.getClassLoader());
+           }
+       }
+       ```
+  
+       <!--测试类：测试类，系统加载器目录下无的class类型文件，有Sub2的class类型文件；在自定义加载器目录下有Super2和Sub2的class类型文件-->
+  
+       ```java
+       public class TestLoader2 {
+           public static void main(String[] args) throws Exception {
+               TestCreateClassLoader loader = new TestCreateClassLoader("loader");
+               loader.setPath("/Users/space/Documents/Growth/Package/Note/UnderstandingTheJVM/Practice/createClass/");
+               Class<?> clazz = loader.loadClass("ClassLoader.Super2");
+               Object object = clazz.newInstance();
+           }
+       }
+       /* output
+       className:ClassLoader.Super2
+       classLoaderName:loader
+       Super2的加载器:ClassLoader.TestCreateClassLoader@77459877
+       Sub2的加载器:jdk.internal.loader.ClassLoaders$AppClassLoader@3d4eac69
+       From Sub2:class ClassLoader.Sub2
+       */
+       ```
+  
+       <!--解析-->
+  
+       1.正常运行的原因
+  
+       - 基本情况
+         - Super2由自定义加载器（子加载器）加载；Sub2由系统类加载器（父加载器）加载
+         - Super2中访问了由系统类加载器（父加载器）所加载的Sub2类
+         - 自定义加载器和系统类加载器处于同一个命名空间中
+       - 规则
+         - 子加载器所加载的类可以找到父加载器所加载的类
+       - 结论
+         - 子加载器能够访问由父加载器所加载的Sub2类
 
 - 实现
 
