--- a/UnderstandingTheJVM/一.类加载.类加载器.md
+++ b/UnderstandingTheJVM/一.类加载.类加载器.md
@@ -1,4 +1,4 @@
-# 一.类加载.类加载器
+#  一.类加载.类加载器
 
 #### 1.基本概念
 
@@ -12,8 +12,20 @@
   
   - Java虚拟机自带的类加载器
     1. 根类加载器（Bootstrap）
+    
+       加载路径："sun.boot.class.path"
+    
     2. 扩展类加载器（Extension）
+    
+       加载路径：java.ext.dirs
+    
+       <!--jdk9以后ExtClassLoader更名成Platformclassloader*-->
+    
     3. 系统（应用）类加载器（System）
+    
+       加载路径：java.class.path
+    
+       <!--使用AppClassLoader-->
   - 用户自定义的类加载器
     1. java.lang.ClassLoader子类
     2. 用户定制类的加载方式
@@ -21,6 +33,7 @@
 - 规则
 
   - JVM规范允许类加载器在预料某个类需要使用前就预先加载，在加载过程中遇到.class文件缺失，则需要等到程序主动使用类时才抛出异常 <!--如果一直没有主动使用，则不会抛出异常-->
+  - 如果一个类由A加载器加载，则这个类的依赖类也是由A加载器加载（该依赖类未被加载过）
 
 - 获取方式
 
@@ -585,6 +598,11 @@
 
 ### 1.3 自定义加载器
 
+- 方法
+
+  1. 扩展java.lang.ClassLoader类
+  2. 覆盖findClass方法
+
 - 加载流程
 
   1. 先判断类是否已经被加载
@@ -783,6 +801,7 @@
     ```java
     public class MyTest1 {
         public static void main(String[] args) {
+          	// 输出用于加载 加载器的加载器
             System.out.println(ClassLoader.class.getClassLoader());
         }
     }
@@ -849,6 +868,7 @@
     108               }
     109           }
     110       }
+  	112		}
   ```
 
   <!--解析-->
@@ -882,7 +902,7 @@
     145                               for (int i = 0; i < len; i++) {
     146                                   MetaIndex.registerDirectory(dirs[i]);
     147                               }
-    																	// 返回每个扩展目录的路径所创建的扩展类加载器的实例
+    																	// 返回在指定目录的路径所创建的扩展类加载器的实例
     148                               return new ExtClassLoader(dirs);
     149                           }
     150                       });
@@ -896,7 +916,7 @@
 
   ```java
    private static File[] getExtDirs() {
-     									// 搜索的路径
+     									// 获取项目根目录
     168               String s = System.getProperty("java.ext.dirs");
     169               File[] dirs;
     170               if (s != null) {
@@ -955,11 +975,11 @@
 
   
 
-### 1.5 系统类加载器
+### 1.5 应用类加载器
 
 - 规则
 
-  - 通过getSystemClassLoader方法能够获取到系统类加载器（见源码部分）
+  - 通过getSystemClassLoader方法能够获取到应用类加载器（见源码部分）
 
 - 源码
 
@@ -1096,3 +1116,157 @@
           * an {@code IllegalStateException} is thrown.
           */
      ```
+
+### 1.6 线程上下文类加载器——重点
+
+- 线程上下文类加载器 定义：该加载器是从JDK1.2开始提供，getContextClassLoader()和setContextClassLoader(ClassLoader cl)能够获取和设置上下文类加载器
+
+  <!--能够在代码执行过程中，随时随地获取到当前线程中的加载器-->
+
+- 规则
+
+  - 如果未通过setContextClassLoader(ClassLoader cl)设置，线程将继承父线程的上下文类加载器
+
+  - Java运行的初始线程的上下文类加载器就是应用类加载器
+
+    原因
+
+    <!--源码：Launcher类片段-->
+
+    ```java
+    public Launcher() {
+       68           // Create the extension class loader
+         						// 创建类加载器的对象
+       69           ClassLoader extcl;
+       76   
+       77           // Now create the class loader to use to launch the application
+       78           try {
+         								// 获取应用类加载器的对象，将extcl作为参数传入，见源码4:getAppClassLoader()
+       79               loader = AppClassLoader.getAppClassLoader(extcl);
+       80           } catch (IOException e) {
+       81               throw new InternalError(
+       82                   "Could not create application class loader");
+       83           }
+       84   
+       85           // Also set the context class loader for the primordial thread.
+         						// 将当前线程的上下文类加载器设置为应用类加载器
+       86           Thread.currentThread().setContextClassLoader(loader);
+    ```
+
+    <!--解析-->
+
+    1.“Thread.currentThread().setContextClassLoader(loader);”中，loader是应用类加载器，而此语句代表将当前线程的上下文类加载器设置为应用类加载器，这就是规则二的原因，同时可以通过 源码2 验证
+
+    <!--源码2：验证-->
+
+    ```java
+    public class TestContextClassLoader implements Runnable {
+        Thread thread;
+    
+        public TestContextClassLoader() {
+            // 初始化线程，并在当前类创建对象时开始线程
+            thread = new Thread(this);
+            thread.start();
+        }
+    
+        @Override public void run() {
+            // 获取加载当前线程的加载器
+            ClassLoader classLoader = this.thread.getContextClassLoader();
+            // 将加载当前线程的加载器设置为获取到的加载器，当前代码没有意义
+            this.thread.setContextClassLoader(classLoader);
+            System.out.println("Class:"+classLoader.getClass());
+            System.out.println("Parent:"+classLoader.getParent().getClass());
+        }
+    
+        public static void main(String[] args) {
+            new TestContextClassLoader();
+        }
+    }
+    /* output 
+    Class:class jdk.internal.loader.ClassLoaders$AppClassLoader
+    Parent:class jdk.internal.loader.ClassLoaders$PlatformClassLoader
+    */
+    ```
+
+- 作用
+
+  父ClassLoader可以使用当前线程Thread.currentThread().getContextClassLoader()所指定的ClassLoader加载的类
+
+  <!--父ClassLoader能够使用子ClassLoader加载的类，因此改变了双亲委托机制-->
+
+- 实际应用
+
+  - 在双亲委托机制，类是自下而上加载的，下层的加载器会委托上层的加载器加载。在SPI（Server Provider Interface）来说，部分接口是Java核心库提供的，这些接口通过启动类加载器加载；而接口的实现通常是jar包（厂商提供），需要使用应用类加载器加载，但是双亲委托机制将导致启动类加载器无法加载jar包，因此无法实现SPI。但是可以通过设置上下文类加载器来加载jar包中对接口类的加载。
+
+  - 当高层提供统一接口让低层实现，同时又要在高层加载（或实例化）低层的类，必须要通过上下文类加载器来实现。因为上下文类加载器可以破坏双亲委托机制
+
+  - 在框架中运用比较多，比如在JDBC中，会运用到线程上下文类加载器。
+
+    https://www.bilibili.com/video/av47756459/?p=31
+
+- 使用方法
+
+  1. 获取
+
+  2. 使用
+
+  3. 还原
+
+     <!--实现-->
+
+     ```java
+     /*
+     上下文类加载的使用流程（ 获取 - 使用 - 还原 ）
+     */
+     // 获取当前线程的类加载器
+     ClassLoader loader = Thread.currentThread().getContextClassLoader();
+     
+     // 使用
+     try {
+       // 将当前线程的加载器设置为需要使用的类加载器
+       Thread.currentThread().setContextClassLoader(TargetClassLoader);
+       // 执行需要执行的方法
+       myMethod();
+     
+     }finally {
+       // 还原成原来的加载器
+       Thread.currentThread().setContextClassLoader(loader);
+     }
+     ```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
