--- a/UnderstandingTheJVM/二.类加载.加载连接初始化.md
+++ b/UnderstandingTheJVM/二.类加载.加载连接初始化.md
@@ -381,6 +381,8 @@
 
 - 被动使用 方式：除主动使用之外的情况
 
+  <!--比如ClassLoader的loadClass方法加载一个类，并不会导致这个类的初始化-->
+
 ### 2.3.2 不同类型
 
 #### 1.常量
@@ -671,7 +673,7 @@
 
 - 规则
 
-  - 由Java虚拟机自带的类加载器加载的类，始终不会被卸载
+  - 由Java虚拟机自带的类加载器（启动类加载器、扩展类加载器、应用类加载器）加载的类，始终不会被卸载
   - 由用户自定义的类加载器是能够被卸载的
 
 - 实现
