--- a/UnderstandingTheJVM/三.字节码.md
+++ b/UnderstandingTheJVM/三.字节码.md
@@ -10,7 +10,7 @@
     javap -verbose .class文件名
     ```
 
-- 基本结构：魔数、版本号、常量池、类信息、类的构造方法、类中的方法信息、类变量以及成员变量等
+- 基本结构
 
 | 结构名称         | 字节长度（字节） | 注解                    |
 | ---------------- | :--------------: | ----------------------- |
@@ -19,7 +19,7 @@
 | Constant Pool    |       2+n        | 常量池数量+常量池数组   |
 | Access Flags     |        2         | 类的访问权限            |
 | This Class Name  |        2         | 类名，索引              |
-| Super CLass Name |        2         | 父类名，索引            |
+| Super Class Name |        2         | 父类名，索引            |
 | Interfaces       |       2+n        | 接口数量+接口名         |
 | Fields           |       2+n        | 域数量+域的表           |
 | Methods          |       2+n        | 方法数量+方法表         |
@@ -235,7 +235,7 @@ CAFEBABE
 - 规则
   - 跟着访问标志
 
-### 1.Practice
+### 1.Practice——重点
 
 <!--编译后的常量池-->
 
@@ -366,6 +366,7 @@ Constant pool:
 - 规则
   - 跟着Fields
   - 方法数量+方法表，如果方法数量为零，则无方法表
+  - **通过attributes_count字段，来判断是否存在属性表。如果attributes_count不为零，后续字节为attribute_name_index，通过查询常量池确定属性表——重点**
 - 方法表
 
 | 类型           | 名称             | 数量             |
@@ -376,7 +377,7 @@ Constant pool:
 | u2             | attributes_count | 1                |
 | attribute_info | attributes       | attributes_count |
 
-- 方法的属性结构表（attribute_info）
+- 方法属性表（attribute_info的结构如下）
 
 | 类型 | 名称                   | 数量 |
 | ---- | ---------------------- | ---- |
@@ -384,9 +385,7 @@ Constant pool:
 | u4   | attribute_length       | 1    |
 | u1   | info[attribute_length] |      |
 
-
-
-### 1.Practice
+### 1.Practice——重点
 
 <!--编译后的常量池-->
 
@@ -424,11 +423,12 @@ Constant pool:
 
 <!--解析-->
 
-1.Fields结束的位置为225行的00 05 00 06 00 00字节
+1.Fields结束的位置为225行的00 05 00 06 00 00字节，结合后续的Code Attribute表、LineNumberTable表、LocalVariableTable表
 
 ```java
 // 1.Methods数量
 00 03 // u2类型，表示数量为3  
+  
 // 2.Methods表
   // access_flags，查看《方法表》，u2类型
 	00 01 // 查看《标志表》，为public类型
@@ -437,24 +437,91 @@ Constant pool:
   // descriptor_index，查看《方法表》，u2类型
   00 08 // 因此查看《常量池》，()V
   // attributes_count，查看《方法表》，u2类型
-  00 01 // 存在属性，数量为1，后续查看《方法的属性结构表》
+  00 01 // 方法存在属性，数量为1，后续查看《方法的属性结构表》
+  
 // 3.方法的属性结构表
-  // attribute_name_index，查看《方法的属性结构表》，u2类型
-  00 09 // 查看《常量池》，Code
-  // attribute_length，查看《方法的属性结构表》，u4类型
+  // attribute_name_index，查看《方法属性表》，u2类型
+  00 09 // 查看《常量池》，显示为Code，则查看《Code Attribute表》
+  // attribute_length，查看《方法属性表》，u4类型
   00 00 00 38 // 56个长度字节，作为Code值
-  // info[attribute_length]，查看《方法的属性结构表》
+  // info[attribute_length]，也就是info[56]，查看《方法属性表》
+  
 // 4.Code Attribute表（其中attribute_name_index和attribute_length已经完成解读，因此从00 00 00 38之后开始解读）
   // max_stack，查看《Code Attribute表》，u2类型
   00 02 // 该方法运行时能达到的操作数栈的最大深度为2
   // max_locals，查看《Code Attribute表》，u2类型
   00 01 // 方法执行期间创建的局部变量的数目为1，包含传入的参数的局部变量
+  // code_length，查看《Code Attribute表》，u4类型
+  00 00 00 0A // 字节数为10个
   
+  // code，查看《Code Attribute表》，长度为code_length
+  2A B7 00 01 2A 04 B5 00 02 B1 // 长度为10个字节，通过Oracle官方文档可查询相应助记符
+  /*
+  助记符分析（通过jclasslib查看助记符，Oracle官方文档查看https://docs.oracle.com/javase/specs/jvms/se8/html/jvms-6.html
+  */
+  // 2A对应助记符为aload_0
+  // B7对应助记符为invokespecial，由于格式为invokespecial indexbyte1 indexbyte2，因此后面为索引，索引值为 00 01，查看常量池为java/lang/Object."<init>":()V
+  // 04对应助记符为iconst_1
+  // B5对应助记符为putfield，由于格式为putfield indexbyte1 indexbyte2，功能为Set field in object，因此索引为 00 02，查看常量池为ByteCode/MyTest1.a:I
+  // B1对应助记符为return
+  
+  // exception_table_length，查看《Code Attribute表》，u2类型
+  00 00 // 异常表长度为零，因此无异常表
+  
+  // attribute_count，查看《Code Attribute表》，u2类型
+  00 02 // 有两个属性, 通过后面两个字节表示的attribute_name_index，能够看出是什么属性表
+  
+// 5.LineNumberTable表，第一个
+  // attribute_name_index，查看《LineNumberTable表》，u2类型
+  00 0A // 属性索引为10，查看常量池为LineNumberTable（行号表）
+  // attribute_length，查看《LineNumberTable表》，u4类型
+  00 00 00 0A // 长度为10
+  // line_number_table_length，查看《LineNumberTable表》，u2类型
+  00 02 // 长度为2
+  // start_pc，查看《LineNumberTable表》，u2类型
+  00 00 // 偏移量为零，说明代码是顶格写的
+  // line_number，查看《LineNumberTable表》，u2类型
+  00 0C // 行号为12，查看代码，第12行为：public class MyTest1
+  
+  // start_pc，查看《LineNumberTable表》，u2类型
+  00 04 // 偏移量为4
+  // line_number，查看《LineNumberTable表》，u2类型
+  00 0D // 行号为13，查看代码，第12行为：public int a = 1
+  
+// 6.LocalVariableTable表,第二个
+	00 0B // 表示索引，查看常量池为局部变量表
+	// attribute_length，查看《LocalVariableTable表》，u4类型
+	00 00 00 0C // 长度为10
+	// local_variable_table_length，查看《LocalVariableTable表》，u2类型
+	00 01 //长度为1
+	// start_pc，查看《LocalVariableTable表》的local_variable_info结构，u2类型
+	00 00 //偏移量为0
+	// length，查看《LocalVariableTable表》的local_variable_info结构，u4类型
+	00 00 00 0A // 长度为10
+	// name_index，查看《LocalVariableTable表》的local_variable_info结构，u2类型
+	00 0C // 索引为12，查看常量池为this
+	// descriptor_index，查看《LocalVariableTable表》的local_variable_info结构，u2类型
+	00 0D // 索引为13，查看常量池为LByteCode/MyTest1
+	// index，查看《LocalVariableTable表》的local_variable_info结构，u2类型
+	00 00 // 检查用，可以忽略
+	
+  //后续内容又是从当前的第二步（2.Methods表）开始循环进行
 ```
 
-### 2.Code Attribute
+<!--结构图（部分）-->
 
-- 作用：保存该方法的结构
+![](assets/3.字节码文件结构.png)
+
+## 3.8 Attributes
+
+- 包含以下属性表
+  - Code Attribute
+  - LineNumberTable
+  - LocalVariableTable等
+
+### 1.Code Attribute
+
+- 作用：作为Code第一种属性，保存该方法的结构
 - 《Code Attribute表》
 
 | 类型           | 名称                   | 数量                   | 注解                                                         |
@@ -467,7 +534,56 @@ Constant pool:
 | u1             | code                   | code_length            |                                                              |
 | u2             | exception_table_length | 1                      |                                                              |
 | exception_info | exception_table        | exception_table_length | 处理异常的信息                                               |
-| u2             | attribute_count        | 1                      |                                                              |
+| u2             | attribute_count        | 1                      | 查看后续属性表                                               |
+
+- 注意
+  - 《Code Attribute表》的attribute_count看出后续的属性数量，如果不为零，则后续两个字节为attribute_name_index字段，能够通过查询常量池看出是什么属性表
+
+### 2.LineNumberTable
+
+- 作用：作为Code第二种属性，跟在Code Attribute后面，在堆栈抛异常的时候可以记录代码的行号或者调试程序时候记录代码行号，也称为行号表
+- 《LineNumberTable表》
+
+| 类型             | 名称                     | 数量 | 注解                       |
+| ---------------- | ------------------------ | ---- | -------------------------- |
+| u2               | attribute_name_index     | 1    | 属性名称索引               |
+| u4               | attribute_length         | 1    | 属性长度                   |
+| u2               | line_number_table_length | 1    | 长度                       |
+| line_number_info | line_number_table        | 1    | line_number_info类型的数组 |
+
+- line_number_info结构如下
+
+| 类型 | 名称        | 数量 | 注解                         |
+| ---- | ----------- | ---- | ---------------------------- |
+| u2   | start_pc    | 1    | 偏移量，代码中前面的空格数量 |
+| u2   | line_number | 1    | 代码中的第几行代码           |
+
+- 注意
+  - 《Code Attribute表》的attribute_count看出后续的属性数量，当前例子中，属性数量为2，第一个属性为LineNumberTable，结束后的两个字节为attribute_name_index字段，查询常量池看出是LocalVariableTable
+
+### 3.LocalVariableTable
+
+- 作用：作为Code第三种属性，跟在LineNumberTable后面，描述栈帧中局部变量表中的变量和源码中的变量之间的关系
+- 《LocalVariableTable表》
+
+| 类型                | 名称                        | 数量 | 注解                             |
+| ------------------- | --------------------------- | ---- | -------------------------------- |
+| u2                  | attribute_name_index        | 1    | 属性名索引地址                   |
+| u4                  | attribute_length            | 1    | 整个LocalVariableTable属性的长度 |
+| u2                  | local_variable_table_length | 1    | 长度                             |
+| local_variable_info | local_variable_table        | 1    | local_variable_info类型的数组    |
+
+- local_variable_info结构如下
+
+| 类型 | 名称             | 数量 | 注解                                     |
+| ---- | ---------------- | ---- | ---------------------------------------- |
+| u2   | start_pc         | 1    | 局部变量的声明周期开始的字节码偏移量     |
+| u4   | length           | 1    | 局部变量的作用范围覆盖的长度             |
+| u2   | name_index       | 1    | 指向常量池的索引，即局部变量名称         |
+| u2   | descriptor_index | 1    | 指向常量池的索引，即局部变量描述名称索引 |
+| u2   | index            | 1    | 局部变量在栈帧局部变量表中的slot位置     |
+
+
 
 
 
